Bug 118686 - VPL mode crashes Quanta
Summary: VPL mode crashes Quanta
Status: RESOLVED FIXED
Alias: None
Product: quanta
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Gentoo Packages Linux
: NOR crash
Target Milestone: ---
Assignee: András Manţia
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2005-12-20 06:15 UTC by Samir M. Nassar
Modified: 2005-12-21 12:30 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Samir M. Nassar 2005-12-20 06:15:44 UTC
Version:            (using KDE KDE 3.5.0)
Installed from:    Gentoo Packages
Compiler:          GCC 3.4.4 GCC 3.3.6 exhibits same problem
OS:                Linux

On starting a blank file, HTML only, and editing it in mixed mode (VPL/source) after a period of editing Quanta will crash.

A good example:

* Start a file from quickstart.
* add a bunch of text, several lines. This will result in a bunch of text separated by break elements within a paragraph element.
* I added some underline, strong, and emphasis elements.
* I started replacing the break elements separating the lines of text with paragraph elements
* Quanta crashed.

The specific sequence it takes it when editing the source view while the visual view is open and trying to edit paragraph tags.

say you have:

<p>
this is a line of text<br/>
this is another line of text<br/>
this is more lines of text<br/>
</p>

Start editing it:

<p>this is a line of text</p>

on line two do:

this is another line of text</p>

before going back to do:

<p>this is another line of text</p>

Here I assume quanta's autofill adds a </p> to do:

<p></p>this is another line of text</p>

but it is hard to tell since the program crashes at this point.
Comment 1 András Manţia 2005-12-21 12:30:03 UTC
SVN commit 490274 by amantia:

Do not corrupt the node tree, even for a little period as it causes strange crashes, this time in VPL.
Also guard the kafkaDocument pointer to avoid random crashes on exit.

BUG: 118686

 M  +57 -38    ChangeLog  
 M  +14 -49    parsers/parser.cpp  
 M  +0 -3      parsers/parser.h  
 M  +36 -2     parsers/parsercommon.cpp  
 M  +4 -0      parsers/parsercommon.h  
 M  +4 -0      parsers/saparser.cpp  
 M  +1 -1      project/project.cpp  
 M  +2 -1      src/quantaview.h