Do not corrupt the node tree, even for a little period as it causes strange crashes, this time in VPL. Also guard the kafkaDocument pointer to avoid random crashes on exit.

BUG: 118686